--- a/themes/minimal/templates/base.html
+++ b/themes/minimal/templates/base.html
@@ -21,7 +21,7 @@
     <article>{% block content %} {% endblock %}</article> 
 
     <footer>
-        Copyright &copy; 2022 Arun Palaniappan
+        Copyright &copy; 2022 Arun Thiagarajan
     </footer>
 </body>
 </html>
