--- a/themes/minimal/static/css/base.css
+++ b/themes/minimal/static/css/base.css
@@ -2,7 +2,7 @@
 
 body {
     margin: 0 auto;
-    max-width: 50em;
+    max-width: 45em;
     font-family: Arial, Helvetica, sans-serif;
 }
 
@@ -10,20 +10,26 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    text-align: center;
+    text-align: justify;
     flex-direction: column;
 }
 
 p {
     color:black;
+    text-align: justify;
 }
 
 .about-me img {
     width: 200px;
 }
 
+a {
+    color: grey;
+    text-decoration: none;
+}
+
 a:hover {
-    color: red;
+    color: black;
     text-decoration: dotted;
 }
 
