--- a/themes/minimal/static/css/base.css
+++ b/themes/minimal/static/css/base.css
@@ -17,6 +17,7 @@ body {
 p {
     color:black;
     text-align: justify;
+    line-height: 1.4;
 }
 
 .about-me img {
@@ -24,7 +25,7 @@ p {
 }
 
 a {
-    color: grey;
+    color: blue;
     text-decoration: none;
 }
 
