--- a/templates/index.html
+++ b/templates/index.html
@@ -8,10 +8,9 @@
     <p>
         I am Arun. I work on ML + Science space. At Deep Forest Science, I work as a machine
         learning engineer where I work on building machine learning pipelines for drug discovery.
-        I also work on backend development and devops.
-        I also contribute to the open source project <a href="https://github.com/deepchem/deepchem">DeepChem</a> and help in project maintenance. The DeepChem library is a tool for applying ML in scientific applications. To this end, I work on adding support for new models, building new features etc.
-        Before Deep Forest, I worked as a project assistant at RISE Lab, Indian Institute of Technology, Madras for about a year.
-        At RISE Lab, my work focused on detecting malwares from network traffic.
+
+        I contribute to the <a href="https://github.com/deepchem/deepchem">DeepChem</a> project and help in project maintenance. The DeepChem library builds tool for applying ML to scientific applications.
+        Before Deep Forest, I worked as a project assistant at RISE Lab, Indian Institute of Technology, Madras for about a year. My work here focused on detecting malwares from network traffic.
         I graduated with a Masters degree in Data Science from PSG College of Technology, Coimbatore in May 2021.
         I like to read, swim and practice yoga during my spare time and I care about socio-economic development and language development.
     </p>
