--- a/templates/index.html
+++ b/templates/index.html
@@ -23,8 +23,9 @@
     I can be found online at
     <ul>
         <li><a href="https://www.linkedin.com/in/arunppsg/">LinkedIn</a></li>
-        <li><a href="https://www.github.com/arunppsg">Github</a></li>
+        <li><a href="https://www.github.com/gusty1g">Github</a></li>
         <li><a href="https://www.twitter.com/arunppsg">Twitter</a></li>
+        <li><a href="mailto:mcgusty1k@gmail.com">Mail</a></li>
     </ul>
 </p>
 
