--- a/templates/index.html
+++ b/templates/index.html
@@ -6,13 +6,12 @@
     <img src="assets/arun.png" alt="Arun Palaniappan">
     </div>
     <p>
-        I am Arun. I work on ML + Science space. At Deep Forest Science, I work as a machine
-        learning engineer where I work on building machine learning pipelines for drug discovery.
-
-        I contribute to the <a href="https://github.com/deepchem/deepchem">DeepChem</a> project and help in project maintenance. The DeepChem library builds tool for applying ML to scientific applications.
-        Before Deep Forest, I worked as a project assistant at RISE Lab, Indian Institute of Technology, Madras for about a year. My work here focused on detecting malwares from network traffic.
+        I am Arun. I work on ML + Science space.
+        I am a founding engineer at <a href="https://deepforestsci.com">Deep Forest Sciences</a>. I work on building Chiron - a platform for accelerating scientific discovery using machine learning. To this end, I contribute to platform design, its efficiency and scalability as well as operations. 
+        I also contribute to <a href="https://github.com/deepchem/deepchem">DeepChem</a>, building open source machine learning algorithms for applications in drug discovery, helping in project maintenance. <br><br>
+        Before Deep Forest, I worked as a project assistant at RISE Lab, Indian Institute of Technology, Madras for about a year where my work focused on detecting malwares from network traffic using predictive algorithms.
         I graduated with a Masters degree in Data Science from PSG College of Technology, Coimbatore in May 2021.
-        I like to read, swim and practice yoga during my spare time and I care about socio-economic development and language development.
+        I like to read, swim and practice yoga during my spare time and I care about socio-economic development and language development. I volunteer at <a href="https://fossunited.org/">FOSS United</a> - a non-profit foundation that aims at promoting and strengthening the Free and Open Source Software (FOSS) ecosystem in India.
     </p>
 </div>
 
