--- a/templates/index.html
+++ b/templates/index.html
@@ -17,14 +17,12 @@
 
 
 
-<h2>Contact</h2>
+<h2>Others</h2>
 <p>
-    I can be found online at
     <ul>
-        <li><a href="https://www.linkedin.com/in/arunppsg/">LinkedIn</a></li>
         <li><a href="https://www.github.com/gusty1g">Github</a></li>
-        <li><a href="https://www.twitter.com/arunppsg">Twitter</a></li>
-        <li><a href="mailto:mcgusty1k@gmail.com">Mail</a></li>
+        <li><a href="mailto:arunppsg@gmail.com">Mail</a></li>
+        <li><a href="https://raw.githubusercontent.com/arunppsg/resume/master/pdf/resume.pdf">Resume</a></li>
     </ul>
 </p>
 
