--- a/templates/index.html
+++ b/templates/index.html
@@ -6,9 +6,9 @@
     <img src="assets/arun.png" alt="Arun Palaniappan">
     </div>
     <p>
-        I am Arun. I work on ML + Science space.
-        I am a software engineer at <a href="https://deepforestsci.com">Deep Forest Sciences</a>. I work on building Chiron - a platform for accelerating scientific discovery using machine learning. To this end, I contribute to platform design and operations.
-        I also contribute to <a href="https://github.com/deepchem/deepchem">DeepChem</a>, building open source machine learning algorithms for applications in drug discovery, helping in project maintenance. <br><br>
+        I am Arun.
+        I am a software engineer at <a href="https://deepforestsci.com">Deep Forest Sciences</a> working on building machine learning platforms for scientific applications.
+        I also contribute to <a href="https://github.com/deepchem/deepchem">DeepChem</a>, a scientific python library for applying deep learning in molecular data.<br><br>
         Before Deep Forest, I worked as a project assistant at RISE Lab, Indian Institute of Technology, Madras for about a year where my work focused on detecting malwares from network traffic using predictive algorithms.
         I graduated with a Masters degree in Data Science from PSG College of Technology, Coimbatore in May 2021.
         I like to read during my spare time and I care about socio-economic development and language development. I volunteer at <a href="https://fossunited.org/">FOSS United</a> - a non-profit foundation that aims at promoting and strengthening the Free and Open Source Software (FOSS) ecosystem in India.
@@ -20,7 +20,7 @@
 <h2>Others</h2>
 <p>
     <ul>
-        <li><a href="https://www.github.com/gusty1g">Github</a></li>
+        <li><a href="https://www.github.com/arunppsg">Github</a></li>
         <li><a href="mailto:arunppsg@gmail.com">Mail</a></li>
         <li><a href="https://raw.githubusercontent.com/arunppsg/resume/master/pdf/resume.pdf">Resume</a></li>
     </ul>
