added twitter url

--- a/templates/index.html
+++ b/templates/index.html
@@ -21,7 +21,7 @@
 <p>
     <ul>
         <li><a href="https://www.github.com/arunppsg">Github</a></li>
-        <li><a href="mailto:arunppsg@gmail.com">Mail</a></li>
+        <li><a href="https://www.twitter.com/arunppsg">Twitter</a></li>
         <li><a href="https://raw.githubusercontent.com/arunppsg/resume/master/pdf/resume.pdf">Resume</a></li>
     </ul>
 </p>
