--- a/themes/minimal/templates/blog.html
+++ b/themes/minimal/templates/blog.html
@@ -16,4 +16,22 @@
     {% endfor %}
 </ul>
 {% endfor %}
+<ul class="posts-list">
+    <li class="post">
+        <div class="post-header">
+            <span class="date">2022-06-05</span>
+            <h4 class="post-title">
+                <a href="https://arunppsg.medium.com/d5d8df488155">Indentation in Python</a>
+            </h4>
+        </div>
+    </li>
+    <li class="post">
+        <div class="post-header">
+            <span class="date">2022-03-10</span>
+            <h4 class="post-title">
+                <a href="https://arunppsg.medium.com/c4fb019efd15">Understanding Copy in Python - Copy, Shallow Copy and Deep Copy</a>
+            </h4>
+        </div>
+    </li>
+</ul>
 {% endblock content %}
