--- a/templates/index.html
+++ b/templates/index.html
@@ -20,8 +20,8 @@
 <h2>Others</h2>
 <p>
     <ul>
+        <li>Mail: arunppsg AT GoogleEmailService DOT com </li>
         <li><a href="https://www.github.com/arunppsg">Github</a></li>
-        <li><a href="https://www.twitter.com/arunppsg">Twitter</a></li>
         <li><a href="https://raw.githubusercontent.com/arunppsg/resume/master/pdf/resume.pdf">Resume</a></li>
     </ul>
 </p>
