fixed github account link, vikatan article

--- a/themes/minimal/templates/musings.html
+++ b/themes/minimal/templates/musings.html
@@ -16,4 +16,15 @@
     {% endfor %}
 </ul>
 {% endfor %}
+<ul class="posts-list">
+    <li class="post">
+        <div class="post-header">
+            <span class="date">2021-08-21</span>
+            <h4 class="post-title">
+                <a href="https://www.vikatan.com/oddities/miscellaneous/my-vikatan-article-about-password">எளிதாக நினைவில் நிற்கும் பாஸ்வேர்டுகளை உருவாக்குவது எப்படி?</a>
+            </h4>
+        </div>
+    </li>
+</ul>
+
 {% endblock content %}
