book notes on rise of theodore roosevelt

--- a/themes/minimal/templates/book-notes.html
+++ b/themes/minimal/templates/book-notes.html
@@ -15,6 +15,9 @@
         </div>
     </li>
     {% endfor %}
+</ul>
+{% endfor %}
+<ul class="posts-list">
     <li class="post">
         <div class="post-header">
             <span class="date">2021-08-07</span>
@@ -25,5 +28,4 @@
         </div>
     </li>
 </ul>
-{% endfor %}
 {% endblock content %}
