added page title, removed footer

--- a/themes/minimal/templates/base.html
+++ b/themes/minimal/templates/base.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="utf-8">
     <link rel="stylesheet" href="{{ get_url(path="css/base.css", trailing_slash=false) | safe }}">
+		<title>Arun Thiagarajan</title>
 </head>
 
 <body>
@@ -21,7 +22,7 @@
     <article>{% block content %} {% endblock %}</article> 
 
     <footer>
-        Copyright &copy; 2023 Arun Thiagarajan
+        <!-- Copyright &copy; 2023 Arun Thiagarajan -->
     </footer>
 </body>
 </html>
