--- a/templates/index.html
+++ b/templates/index.html
@@ -11,8 +11,13 @@
         I also contribute to <a href="https://github.com/deepchem/deepchem">DeepChem</a>, a scientific python library for applying deep learning in molecular data.<br><br>
         Before Deep Forest, I worked as a project assistant at RISE Lab, Indian Institute of Technology, Madras for about a year where my work focused on detecting malwares from network traffic using predictive algorithms.
         I graduated with a Masters degree in Data Science from PSG College of Technology, Coimbatore in May 2021.
-        I like to read during my spare time and I care about socio-economic development and language development. I volunteer at <a href="https://fossunited.org/">FOSS United</a> - a non-profit foundation that aims at promoting and strengthening the Free and Open Source Software (FOSS) ecosystem in India.
+        I also volunteer at <a href="https://fossunited.org/">FOSSUnited</a>, a non-profit aimed at strengthening the open-source software ecosystem in India by organizing the monthly FOSSUnited meetups at Bangalore.
     </p>
+		<!--
+    <p>
+      <b>I am actively looking for openings in the industry</b>. If you have suitable job openings or are interested in collaborations, feel free to reach out to me. My resume can be found <a href="https://raw.githubusercontent.com/arunppsg/resume/master/pdf/resume.pdf">here</a>. 
+    </p>
+		-->
 </div>
 
 
@@ -21,8 +26,9 @@
 <p>
     <ul>
         <li>Mail: arunppsg AT GoogleEmailService DOT com </li>
-        <li><a href="https://www.github.com/arunppsg">Github</a></li>
         <li><a href="https://raw.githubusercontent.com/arunppsg/resume/master/pdf/resume.pdf">Resume</a></li>
+        <li><a href="https://www.github.com/arunppsg">Github</a></li>
+				<li><a href="https://www.linkedin.com/in/arunppsg/">Linkedin</a></li>
     </ul>
 </p>
 
