--- a/templates/index.html
+++ b/templates/index.html
@@ -13,11 +13,9 @@
         I graduated with a Masters degree in Data Science from PSG College of Technology, Coimbatore in May 2021.
         I also volunteer at <a href="https://fossunited.org/">FOSSUnited</a>, a non-profit aimed at strengthening the open-source software ecosystem in India by organizing the monthly FOSSUnited meetups at Bangalore.
     </p>
-		<!--
     <p>
-      <b>I am actively looking for openings in the industry</b>. If you have suitable job openings or are interested in collaborations, feel free to reach out to me. My resume can be found <a href="https://raw.githubusercontent.com/arunppsg/resume/master/pdf/resume.pdf">here</a>. 
+      I am open to new opportunities and collaboration. Feel free to reach out to me for the same.
     </p>
-		-->
 </div>
 
 
