make people curious
see: https://sive.rs/shrtd

--- a/templates/index.html
+++ b/templates/index.html
@@ -6,8 +6,8 @@
     <img src="assets/arun.png" alt="Arun Palaniappan">
     </div>
     <p>
-        I am Arun.
-        I am a software engineer at <a href="https://deepforestsci.com">Deep Forest Sciences</a> working on building machine learning platforms for scientific applications.
+        I am Arun. My work can be described as a cross between the works of <a href="https://karpathy.ai/">Andrej Karpathy</a>, <a href="https://gvanrossum.github.io/">Guido van Rossum</a> and <a href="https://tiangolo.com/">Sebastián Ramírez</a> as I work on building AI applications in Python.
+        Currently, I am a machine learning software engineer at <a href="https://deepforestsci.com">Deep Forest Sciences</a> working on building a web based machine learning platform for drug discovery applications.
         I also contribute to <a href="https://github.com/deepchem/deepchem">DeepChem</a>, a scientific python library for applying deep learning in molecular data.<br><br>
         Before Deep Forest, I worked as a project assistant at RISE Lab, Indian Institute of Technology, Madras for about a year where my work focused on detecting malwares from network traffic using predictive algorithms.
         I graduated with a Masters degree in Data Science from PSG College of Technology, Coimbatore in May 2021.
