--- a/templates/index.html
+++ b/templates/index.html
@@ -8,7 +8,7 @@
     <p>
         I am Arun. My work can be described as a cross between the works of <a href="https://karpathy.ai/">Andrej Karpathy</a>, <a href="https://gvanrossum.github.io/">Guido van Rossum</a> and <a href="https://tiangolo.com/">Sebastián Ramírez</a> as I work on building AI applications in Python.
         Currently, I am a machine learning software engineer at <a href="https://deepforestsci.com">Deep Forest Sciences</a> working on building a web based machine learning platform for drug discovery applications.
-        I also contribute to <a href="https://github.com/deepchem/deepchem">DeepChem</a>, a scientific python library for applying deep learning in molecular data.<br><br>
+        I also contribute to <a href="https://github.com/deepchem/deepchem">DeepChem</a>, a scientific Python library for applying deep learning in molecular data.<br><br>
         Before Deep Forest, I worked as a project assistant at RISE Lab, Indian Institute of Technology, Madras for about a year where my work focused on detecting malwares from network traffic using predictive algorithms.
         I graduated with a Masters degree in Data Science from PSG College of Technology, Coimbatore in May 2021.
         I also volunteer at <a href="https://fossunited.org/">FOSSUnited</a>, a non-profit aimed at strengthening the open-source software ecosystem in India by organizing the monthly FOSSUnited meetups at Bangalore.
@@ -17,8 +17,6 @@
       I am open to new opportunities and collaboration. Feel free to reach out to me for the same.
     </p>
 </div>
-
-
 
 <h2>Others</h2>
 <p>
@@ -29,5 +27,7 @@
 				<li><a href="https://www.linkedin.com/in/arunppsg/">Linkedin</a></li>
     </ul>
 </p>
+
+<p> Check out what I am doing in the <a href="/now">now</a> page, technical blogs in the <a href="/posts">posts</a> page, musings <a href="/musings">here</a> and book notes - notes from the book which I have read <a href="/book-notes">here</a>.</p>
 
 {% endblock content %}
