--- a/themes/minimal/templates/base.html
+++ b/themes/minimal/templates/base.html
@@ -12,7 +12,7 @@
             <div class="nav-links">
                 {% for menu_link in config.extra.menu_links %}
                 {% set link_url = menu_link.url | replace(from="$BASE_URL", to=config.base_url) %}
-                <a {% if current_url and current_url==link_url %}class="active" {% endif %}
+                <a class="menu-links" {% if current_url and current_url==link_url %}class="active" {% endif %}
                     href="{{ link_url | safe}} ">{{menu_link.name}}
                 </a>
                 {% endfor %}
