--- a/templates/index.html
+++ b/templates/index.html
@@ -6,15 +6,11 @@
     <img src="assets/arun.png" alt="Arun Palaniappan">
     </div>
     <p>
-        I am Arun. My work can be described as a cross between the works of <a href="https://karpathy.ai/">Andrej Karpathy</a>, <a href="https://gvanrossum.github.io/">Guido van Rossum</a> and <a href="https://tiangolo.com/">Sebastián Ramírez</a> as I work on building AI applications in Python.
-        Currently, I am a machine learning software engineer at <a href="https://deepforestsci.com">Deep Forest Sciences</a> working on building a web based machine learning platform for drug discovery applications.
+        I am Arun. Currently, I am a machine learning software engineer at <a href="https://deepforestsci.com">Deep Forest Sciences</a> working on building a web based machine learning platform for drug discovery applications.
         I also contribute to <a href="https://github.com/deepchem/deepchem">DeepChem</a>, a scientific Python library for applying deep learning in molecular data.<br><br>
         Before Deep Forest, I worked as a project assistant at RISE Lab, Indian Institute of Technology, Madras for about a year where my work focused on detecting malwares from network traffic using predictive algorithms.
         I graduated with a Masters degree in Data Science from PSG College of Technology, Coimbatore in May 2021.
         I also volunteer at <a href="https://fossunited.org/">FOSSUnited</a>, a non-profit aimed at strengthening the open-source software ecosystem in India by organizing the monthly FOSSUnited meetups at Bangalore.
-    </p>
-    <p>
-      I am open to new opportunities and collaboration. Feel free to reach out to me for the same.
     </p>
 </div>
 
@@ -22,7 +18,7 @@
 <p>
     <ul>
         <li>Mail: arunppsg AT GoogleEmailService DOT com </li>
-        <li><a href="https://raw.githubusercontent.com/arunppsg/resume/master/pdf/resume.pdf">Resume</a></li>
+        <!-- <li><a href="https://raw.githubusercontent.com/arunppsg/resume/master/pdf/resume.pdf">Resume</a></li> -->
         <li><a href="https://www.github.com/arunppsg">Github</a></li>
 				<li><a href="https://www.linkedin.com/in/arunppsg/">Linkedin</a></li>
     </ul>
