added dfs farewell post

--- a/templates/index.html
+++ b/templates/index.html
@@ -6,8 +6,8 @@
     <img src="assets/arun.png" alt="Arun Palaniappan">
     </div>
     <p>
-        I am Arun. Currently, I am a machine learning software engineer at <a href="https://deepforestsci.com">Deep Forest Sciences</a> working on building a web based machine learning platform for drug discovery applications.
-        I also contribute to <a href="https://github.com/deepchem/deepchem">DeepChem</a>, a scientific Python library for applying deep learning in molecular data.<br><br>
+        I am Arun. I worked as a machine learning software engineer at <a href="https://deepforestsci.com">Deep Forest Sciences</a> on building a web based machine learning platform for drug discovery applications.
+        I also contributed to <a href="https://github.com/deepchem/deepchem">DeepChem</a>, a scientific Python library for applying deep learning in molecular data.<br><br>
         Before Deep Forest, I worked as a project assistant at RISE Lab, Indian Institute of Technology, Madras for about a year where my work focused on detecting malwares from network traffic using predictive algorithms.
         I graduated with a Masters degree in Data Science from PSG College of Technology, Coimbatore in May 2021.
         I also volunteer at <a href="https://fossunited.org/">FOSSUnited</a>, a non-profit aimed at strengthening the open-source software ecosystem in India by organizing the monthly FOSSUnited meetups at Bangalore.
