update index page

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,16 +1,22 @@
 {% extends "base.html" %}
 {% block content %}
 
-<h2>Arun Pa Thiagarajan</h2>
 <div class="about-me">
+    <h2>Arun Palaniappan</h2>
+    <!-- <img src="assets/arun.png" alt="Arun Palaniappan"> -->
     <p>
-        I am Arun. I worked as a machine learning software engineer at <a href="https://deepforestsci.com">Deep Forest Sciences</a> on building a web based machine learning platform for drug discovery applications.
-        I also contributed to <a href="https://github.com/deepchem/deepchem">DeepChem</a>, a scientific Python library for applying deep learning in molecular data.<br><br>
-        Before Deep Forest, I worked as a project assistant at RISE Lab, Indian Institute of Technology, Madras for about a year where my work focused on detecting malwares from network traffic using predictive algorithms.
-        I graduated with a Masters degree in Data Science from PSG College of Technology, Coimbatore in May 2021.
-        I also volunteer at <a href="https://fossunited.org/">FOSSUnited</a>, a non-profit aimed at strengthening the open-source software ecosystem in India by organizing the monthly FOSSUnited meetups at Bangalore.
+        I am Arun. I work as a software engineer at <a href="https://zerodha.com">Zerodha</a>.
+        <br><br>
+        Once upon a time, I worked on ML + Science space at Deep Forest Science. I worked as a machine
+        learning engineer where I built machine learning pipelines for drug discovery + some backend
+        and devops work with AWS.
+        <br><br>
+        Before Deep Forest, I was a project assistant at IIT-Madras for
+        about a year working on network security. I graduated with a Masters degree in Data Science
+        from PSG College of Technology, Coimbatore in May 2021. I like to read and I
+        practice doing nothing during my spare time.
     </p>
-</div>
+    </div>
 
 <h2>Others</h2>
 <p>
