--- a/themes/minimal/templates/base.html
+++ b/themes/minimal/templates/base.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <link rel="stylesheet" href="{{ get_url(path="css/base.css", trailing_slash=false) | safe }}">
-		<title>Arun Thiagarajan</title>
+		<title>Arun Palaniappan</title>
 </head>
 
 <body>
