render posts by tag

--- a/templates/index.html
+++ b/templates/index.html
@@ -28,6 +28,8 @@
     </ul>
 </p>
 
-<p> Check out what I am doing in the <a href="/now">now</a> page, technical blogs in the <a href="/posts">posts</a> page, musings <a href="/musings">here</a> and book notes - notes from the book which I have read <a href="/book-notes">here</a>.</p>
+<p> Check out what I am doing in the <a href="/now">now</a> page, technical blogs in the <a href="/posts">posts</a> page, musings <a href="/musings">here</a> and book notes - notes from the book which I have read <a href="/book-notes">here</a>.
+You can also browse them by tags <a href="/tag">here</a>.
+</p> 
 
 {% endblock content %}
